--- a/templates/home.html
+++ b/templates/home.html
@@ -46,8 +46,10 @@
 
 <footer style="text-align: center; padding: 30px; background-color: #004a99; color: white; margin-top: 50px;">
     <p style="margin: 0; font-weight: bold;">© 2025 K.C. International School | All Rights Reserved</p>
+    <p style="font-size: 0.8rem; color: #666;">Made by **Swastik Kohli**</p>
     <p style="margin: 5px 0 0 0; font-size: 0.9rem;">Contact: kcisj2016@gmail.com</p>
 </footer>
 
 </body>
+
 </html>
