--- a/templates/about.html
+++ b/templates/about.html
@@ -58,7 +58,9 @@
 <footer>
     <p>© 2025 K.C. International School | All Rights Reserved</p>
     <p style="font-weight: normal; font-size: 0.9rem;">Email: kcisj2016@gmail.com</p>
+    <p style="font-size: 0.8rem; color: #666;">Made by **Swastik Kohli**</p>
 </footer>
 
 </body>
+
 </html>
