--- a/templates/career.html
+++ b/templates/career.html
@@ -90,7 +90,11 @@
     </div>
 </div>
 
-<footer><p>© 2025 K.C. International School | All Rights Reserved</p></footer>
+<footer>
+    <p>© 2025 K.C. International School | All Rights Reserved</p>
+    <p style="font-size: 0.8rem; color: #666;">Made by **Swastik Kohli**</p>
+</footer>
 
 </body>
+
 </html>
