--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 <body style="margin:0; font-family: Arial, sans-serif;">
 
 <div style="background: #004a99; color: white; padding: 8px 30px; text-align: right; font-size: 0.9rem;">
-    📧 Email: <a href="mailto:kcisj2016@gmail.com" style="color: white; text-decoration: none;">kcisj2016@gmail.com</a> | 📞 Call: +91 12345 67890
+    📧 Email: <a href="mailto:kcisj2016@gmail.com" style="color: white; text-decoration: none;">kcisj2016@gmail.com</a> | 📞 Call: +91-9821000315/ +91-9821000316
 </div>
 
 <header style="text-align: center; padding: 40px; background: white;">
@@ -52,4 +52,5 @@
 </body>
 
 </html>
+
 
