--- a/templates/admission.html
+++ b/templates/admission.html
@@ -40,7 +40,7 @@
 <body>
 
 <div class="top-bar">
-    📧 Email: <a href="mailto:kcisj2016@gmail.com" style="color: white; text-decoration: none;">kcisj2016@gmail.com</a> | 📞 Call: +91 12345 67890
+    📧 Email: <a href="mailto:kcisj2016@gmail.com" style="color: white; text-decoration: none;">kcisj2016@gmail.com</a> | 📞 Call: +91-9821000315/ +91-9821000316
 </div>
 
 <header>
@@ -149,4 +149,5 @@
 </body>
 
 </html>
+
 
