--- a/templates/career.html
+++ b/templates/career.html
@@ -34,7 +34,7 @@
 </head>
 <body>
 
-<div class="top-bar">📧 kcisj2016@gmail.com | 📞 Call: +91 12345 67890</div>
+<div class="top-bar">📧 kcisj2016@gmail.com | 📞 Call: +91-9821000315/ +91-9821000316</div>
 
 <header><h1 style="color:#004a99; margin:0;">K.C. International School</h1></header>
 
@@ -98,4 +98,5 @@
 </body>
 
 </html>
+
 
