--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,7 @@
 <body>
 
 <div class="top-bar">
-    📧 Email: kcisj2016@gmail.com | 📞 Call: +91 12345 67890
+    📧 Email: kcisj2016@gmail.com | 📞 Call: +9-9821000315/ +91-9821000316
 </div>
 
 <header>
@@ -62,4 +62,5 @@
 </body>
 
 </html>
+
 
