--- a/templates/about.html
+++ b/templates/about.html
@@ -37,7 +37,7 @@
 <div class="container">
     <section class="principal-card">
         <div style="flex: 1; text-align: center; min-width: 250px;">
-            <img src="{{ url_for('static', filename='images/principal.jpg') }}" alt="Mr. Rajendra Singh">
+            <img src="{{ url_for('static', filename='principal.jpg') }}" alt="Mr. Rajendra Singh">
             <h3>Mr. Rajendra Singh</h3>
             <p style="color:#004a99; font-weight: bold;">Principal, K.C.I.S</p>
         </div>
@@ -62,5 +62,6 @@
 </body>
 
 </html>
+
 
 
