--- a/templates/admission.html
+++ b/templates/admission.html
@@ -114,7 +114,7 @@
             <h2 style="margin-top: 0; text-align: center;">Admission Enquiry 2025-26</h2>
             <p style="text-align: center; color: #666; margin-bottom: 25px;">Fill your details below to receive a call back from our admission team.</p>
             
-            <form action="https://formspree.io/f/kcisj2016@gmail.com" method="POST">
+            <form action="/admission" method="POST">
                 <label>Parent Name</label>
                 <input type="text" name="parent_name" placeholder="Full Name" required>
                 
@@ -149,5 +149,6 @@
 </body>
 
 </html>
+
 
 
