--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
 
 <header style="text-align: center; padding: 40px; background: white;">
     <header style="display: flex; align-items: center; justify-content: center; padding: 20px; background: white;">
-    <img src="{{ url_for('static', filename='logo.png') }}" alt="KCIS Logo" style="height: 80px; margin-right: 20px;">
+    <img src="{{ url_for('static', filename='school_logo.png') }}" alt="KCIS Logo" style="height: 80px; margin-right: 20px;">
     
     <h1 style="color: #004a99; margin: 0; font-size: 2.5rem;">K.C. International School</h1>
     <p style="color: #666; font-style: italic;">Empowering Minds, Shaping Futures</p>
@@ -55,6 +55,7 @@
 </body>
 
 </html>
+
 
 
 
