--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
 <header style="display:flex; justify-content:center; align-items:center; background:white; padding:25px;">
 <img src="{{ url_for('static', filename='school_logo.png') }}" style="height:85px; margin-right:15px;">
 <div>
-<h1 style="margin:0; color:#003366; font-size:34px;">K.C. International School</h1>
+<h1 style="margin:0; color: white; font-size:34px;">K.C. International School</h1>
 <p style="margin:0; color:#777;">Empowering Minds, Shaping Futures</p>
 </div>
 </header>
@@ -99,3 +99,4 @@ Apply Now
 
 </body>
 </html>
+
