--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
 <header style="display:flex; justify-content:center; align-items:center; background:white; padding:25px;">
 <img src="{{ url_for('static', filename='school_logo.png') }}" style="height:85px; margin-right:15px;">
 <div>
-<h1 style="margin:0; color: white; font-size:34px;">K.C. International School</h1>
+<h1 style="margin:0; color: blue; font-size:34px;">K.C. International School</h1>
 <p style="margin:0; color:#777;">Empowering Minds, Shaping Futures</p>
 </div>
 </header>
@@ -44,7 +44,7 @@ text-align:center;
 color:white;
 ">
 <div>
-<h2 style="font-size:48px; margin-bottom:15px;">Welcome to K.C. International School</h2>
+<h2 style="color: white;">Welcome to K.C. International School</h2>
 <p style="font-size:20px; margin-bottom:30px;">Learning Today, Leading Tomorrow</p>
 <a href="/admission" style="
 background:#ff9800;
@@ -99,4 +99,5 @@ Apply Now
 
 </body>
 </html>
+
 
