--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,9 @@
 
 <!-- Header -->
 <header style="display:flex; justify-content:center; align-items:center; background:white; padding:25px;">
-<img src="{{ url_for('static', filename='school_logo.png') }}" style="height:85px; margin-right:15px;">
+<img src="{{ url_for('static', filename='images/school_logo.png') }}"
+     alt="School Logo"
+     style="height:85px; margin-right:15px;">
 <div>
 <h1 style="margin:0; color:#003366; font-size:34px;">K.C. International School</h1>
 <p style="margin:0; color:#777;">Empowering Minds, Shaping Futures</p>
@@ -101,6 +103,7 @@ Apply Now
 
 </body>
 </html>
+
 
 
 
